fixing messages